Proper reactive formating

--- a/sub-pages/style-test.html
+++ b/sub-pages/style-test.html
@@ -11,10 +11,10 @@
 
     <body>
         <div class="center">
-            <h1 class="gradient-text">Header h1</h1>
-            <h2>Header h2</h2>
-            <h3>Header h3</h3>
-            <h4>Header h4</h4>
+            <h1 class="gradient-text">Header h1</h1> <br>
+            <h2>Header h2</h2> <br>
+            <h3>Header h3</h3> <br>
+            <h4>Header h4</h4> <br>
 
             <hr/>
 
