--- a/sub-pages/Games.html
+++ b/sub-pages/Games.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="utf-8">
-        <title>Programming</title>
+        <title>Games</title>
 
         <!-- Local style sheet relative to this file -->
         <link rel="stylesheet" href="../style.css">
