Added some art to gallery

--- a/sub-pages/3D-Art.html
+++ b/sub-pages/3D-Art.html
@@ -39,21 +39,23 @@
                 <br/>
 
                 <div class="gallery">
-                    <img src="../resources/art/gladiator-clay.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
-                    <img src="../resources/art/scar-render.jpg">
+                    <img src="https://cdna.artstation.com/p/assets/images/images/066/577/194/large/jonas-h-highpoly-clay.jpg?1693250247">
+                    <img src="https://cdna.artstation.com/p/assets/images/images/066/578/118/large/jonas-h-blender-render.jpg?1693250605">
+                    <img src="https://cdna.artstation.com/p/assets/images/images/066/575/540/large/jonas-h-scar-blender-render.jpg?1693246344">
+                    <img src="https://cdna.artstation.com/p/assets/images/images/051/282/452/large/jonas-h-scarcleanrender.jpg?1656926617">
+                    <img src="https://cdnb.artstation.com/p/assets/images/images/066/573/397/large/jonas-h-render2-combined-low-res.jpg?1693242532">
+                    <img src="https://cdnb.artstation.com/p/assets/images/images/066/597/827/large/jonas-h-clay3-combined-low-res.jpg?1693304579">
+                    <img src="https://cdnb.artstation.com/p/assets/images/images/066/574/311/large/jonas-h-zweihaender-close.jpg?1693244178">
+                    <img src="https://cdna.artstation.com/p/assets/images/images/066/578/980/large/jonas-h-merchelmetchoice.jpg?1693252090">
+                    <img src="https://cdna.artstation.com/p/assets/images/images/066/579/368/large/jonas-h-merc-glove-boots.jpg?1693252768">
+                    <img src="">
+                    <img src="">
+                    <img src="">
+                    <img src="../resources/art/knightDarkColor.png">
+                    <img src="../resources/art/comicpage (1).jpg">
+                    <img src="../resources/art/comicpage (2).jpg">
+                    <img src="../resources/art/comicpage (3).jpg">
+                    <img src="../resources/art/comicpage (4).jpg">
                 </div>
              </div>
         </div> 
