--- a/sub-pages/3D-Art.html
+++ b/sub-pages/3D-Art.html
@@ -13,14 +13,14 @@
 
         <header>
             <div class="reactive-flex">
-                <div style="padding-left: 4em; padding-right: 4em;">
-                    <h1 class="gradient-text home-button" onclick="window.location.href='../index.html'" style="display: inline; padding: 0;">Jonas Hack</h1></a>
-                    <span style="padding-left: 1em; padding-right: 1em"></span>
-                    <h2 style="display: inline-block;">3D Art</h2>
+                <div style="padding: 0.5em 4em 0.5em 4em; vertical-align: middle;">
+                    <h1 class="gradient-text home-button" onclick="window.location.href='../index.html'" style="display: inline; padding: 0; margin: 0; vertical-align: middle;">Jonas Hack</h1></a>
+                    <span style="padding: 0; padding-left: 1em; padding-right: 1em"></span>
+                    <h2 style="display: inline-block; padding: 0; margin: 0; vertical-align: middle;">3D Art</h2>
                 </div>
                 
     
-                <nav class="horzontal-flex" style="flex-wrap: wrap; padding-left: 0.5em; padding-right: 0.5em; justify-content: center;">
+                <nav class="horzontal-flex" style="flex-wrap: wrap; padding-left: 0.5em; padding-right: 0.5em; justify-content: center; align-content: center;">
                     <button onclick="window.location.href='style-test.html';">Style Sheet</button>
                     <button onclick="window.location.href='Programming.html';">Programming</button>
                     <button onclick="window.location.href='3D-Art.html';">3D Art</button>
@@ -58,21 +58,24 @@
         </div> 
 
 
-
         <footer>
-            <h4 style="display: block; text-align: center; margin-bottom: 0; padding: 0;">External Links:</h4>
-            <div class="horzontal-flex" style="padding: 0.5em 1.5em 1em 1.5em; justify-content: space-evenly; align-content: stretch;">
-                <a href="mailto:hack@in.tum.de" target="_blank" style="font-size: 1.2em; text-decoration: none;">
-                    ✉ Email
+            <h4 style="display: block; text-align: center; margin-bottom: 0; padding: 0; margin-top: 0;">External Links</h4>
+            <!--
+                <hr style="transform: translateY(2.1em);">
+                <hr style="transform: translateY(2.9em);">
+            -->
+            <div class="horzontal-flex" style="padding: 1em 1.5em 0em 1.5em; justify-content: space-evenly; align-content: center;">
+                <a href="mailto:hack@in.tum.de" target="_blank">
+                    <img src="../resources/branding/simplemail.svg" alt="Email" style="height: 2em; transform: translateY(-0.35em);">
                 </a>
                 <a href="https://zockchster.itch.io/" target="_blank">
-                    <img src="https://static.itch.io/images/logo-white-new.svg" alt="Itch.io" style="height: 1.5em;">
+                    <img src="https://static.itch.io/images/itchio-textless-white.svg" alt="Itch.io" style="height: 1.3em; transform: translateY(-0.02em);">
                 </a>
                 <a href="https://www.artstation.com/zockchster" target="_blank">
-                    <img src="../resources/branding/ArtStation-logo-vertical-dark.svg" alt="Artstation" style="height: 2.4em;">
+                    <img src="../resources/branding/ArtStation-logomark-white.svg" alt="Artstation" style="height: 2.6em; transform: translateY(-0.66em);">
                 </a>
                 <a href="https://github.com/Jonas-Hack" target="_blank">
-                    <img src="../resources/branding/github-logo.svg" alt="Github" style="height: 1.7em;">
+                    <img src="../resources/branding/github-logo.svg" alt="Github" style="height: 1.25em; transform: translateY(-0em);">
                 </a>
             </div>
         </footer>
