--- a/sub-pages/style-test.html
+++ b/sub-pages/style-test.html
@@ -4,7 +4,16 @@
     <head>
         <meta charset="utf-8">
         <title>Style Test</title>
+        <link rel="icon" href="resources/page/profileThumb.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="resources/page/profileThumb.png">
 
+
+        <!-- Open Graph Protocol Metadata -->
+        <meta property="og:title" content="Jonas Hack">
+        <meta property="og:description" content="Style Sheet Test">
+        <meta property="og:image" content="https://jonas-hack.github.io/resources/page/profileThumb.png">
+        <meta property="og:url" content="https://jonas-hack.github.io/index.html">
+        <meta property="og:type" content="website">
         <!-- Local style sheet relative to this file -->
         <link rel="stylesheet" href="../style.css">
     </head>
