Fixed relative filepaths for icons

--- a/sub-pages/3D-Art.html
+++ b/sub-pages/3D-Art.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>3D Art</title>
-        <link rel="icon" href="resources/page/profileThumb.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="resources/page/profileThumb.png">
+        <link rel="icon" href="../resources/page/profileThumb.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="../resources/page/profileThumb.png">
 
 
         <!-- Open Graph Protocol Metadata -->
