Improved Gallery Img Aspect Ratio

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 <p> 
                     Hi, my name is Jonas Hack. I'm a <b class="gradient-text">Game Programmer</b> by trade and <b class="gradient-text">3D Artist</b> by hobby.
                     <br>
+                    <b class="gradient-text">Tool Dev</b> and <b class="gradient-text">Tech Art</b> are among my special interests.
+                    <br>
                     Currently I study <b class="gradient-text">Informatics: Games Engineering</b> at TUM, but my studies are coming to an end soon. 
                     <br>
                     Therefore I'm looking to join a Munich based studio.
