--- a/sub-pages/3D-Art.html
+++ b/sub-pages/3D-Art.html
@@ -48,7 +48,7 @@
                 <p>Also feel free to check out my </p> <a href="https://www.artstation.com/zockchster" target="_blank">ArtStation</a><br/>
                 <br/>
 
-                <div class="gallery">
+                <div class="dynamic-gallery">
                     <img src="https://cdna.artstation.com/p/assets/images/images/066/577/194/large/jonas-h-highpoly-clay.jpg?1693250247">
                     <img src="https://cdna.artstation.com/p/assets/images/images/066/578/118/large/jonas-h-blender-render.jpg?1693250605">
                     <img src="https://cdna.artstation.com/p/assets/images/images/066/575/540/large/jonas-h-scar-blender-render.jpg?1693246344">
