Began working on project layouting

--- a/sub-pages/style-test.html
+++ b/sub-pages/style-test.html
@@ -56,6 +56,22 @@
 
             <div class="gradient-highlight" style="height: 100px; width: 300px;"></div>
             
+            <div class="container secondary">
+                <div class="horzontal-flex">
+                    <div class="tech-icon">
+                        <img src="../resources/branding/simplemail.svg">
+                        <p>Test Tool Tip</p>    
+                    </div>
+
+                    <div class="tech-icon">
+                        <img src="../resources/branding/simplemail.svg">
+                        <p>Test Tool Tip</p>    
+                    </div>
+
+
+                </div>
+           </div>
+
             <br/> <br/>
 
             <button>Test Button</button>
@@ -111,7 +127,7 @@
             -->
             <div class="horzontal-flex" style="padding: 1em 1.5em 0em 1.5em; justify-content: space-evenly; align-content: center;">
                 <a href="mailto:hack@in.tum.de" target="_blank">
-                    <img src="../resources/branding/simplemail.svg" alt="Email" style="height: 2em; transform: translateY(-0.35em);">
+                    <img src="../resources/branding/simplemail.svg" alt="Email" style="height: 1.7em; transform: translateY(-0.19em);">
                 </a>
                 <a href="https://zockchster.itch.io/" target="_blank">
                     <img src="https://static.itch.io/images/itchio-textless-white.svg" alt="Itch.io" style="height: 1.3em; transform: translateY(-0.02em);">
