Just slight formatting in style sheet test

--- a/sub-pages/Games.html
+++ b/sub-pages/Games.html
@@ -45,7 +45,7 @@
             <br/>
             
 
-            <div class="container secondary">
+            <div class="container secondary" id="Kawami">
                 <h4> Kawami</h4>
 
                 <div class="horzontal-flex" style="justify-content: space-evenly; align-content: space-around; gap:0.2em">               
@@ -86,7 +86,8 @@
                 <div class="reactive-flex">
                     <span>
                         <a href="https://believing-gamedev.itch.io/kawami" target="_blank" style="position: relative; text-align: center;">
-                            <img src="https://img.itch.zone/aW1nLzEyNDM5Mzg3LnBuZw==/315x250%23c/NCNVwZ.png" style="border-radius: 2em;">
+                            <img src="https://img.itch.zone/aW1nLzEyNDM5Mzg3LnBuZw==/315x250%23c/NCNVwZ.png" 
+                            style="border-radius: 2em;">
                             <h4 style="position: absolute; bottom:-10%; left: 50%; transform: translateX(-50%);
                             padding:0.5em; background-color: var(--transCol); border-radius: 1em;">Play on Itch</h4>
                             </img>
