removed style sheet test from nav menu

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 
     
                 <nav class="horzontal-flex" style="flex-wrap: wrap; padding-left: 0.5em; padding-right: 0.5em; justify-content: center; align-content: center;">
-                    <button onclick="window.location.href='sub-pages/style-test.html';">Style Sheet</button>
+                    <!-- <button onclick="window.location.href='sub-pages/style-test.html';">Style Sheet</button> -->
                     <button onclick="window.location.href='sub-pages/Programming.html';">Programming</button>
                     <button onclick="window.location.href='sub-pages/3D-Art.html';">3D Art</button>
                     <button onclick="window.location.href='sub-pages/Games.html';">Games</button>
