--- a/sub-pages/Programming.html
+++ b/sub-pages/Programming.html
@@ -32,7 +32,7 @@
                 
     
                 <nav class="horzontal-flex" style="flex-wrap: wrap; padding-left: 0.5em; padding-right: 0.5em; justify-content: center; align-content: center;">
-                    <button onclick="window.location.href='style-test.html';">Style Sheet</button>
+                    <!-- <button onclick="window.location.href='style-test.html';">Style Sheet</button> -->
                     <button onclick="window.location.href='Programming.html';">Programming</button>
                     <button onclick="window.location.href='3D-Art.html';">3D Art</button>
                     <button onclick="window.location.href='Games.html';">Games</button>
