slight padding on awards

--- a/sub-pages/Portfolio.html
+++ b/sub-pages/Portfolio.html
@@ -126,7 +126,8 @@
                     <h2>Awards</h2><br><br>
                     <h3>SemesterGameJam</h3><br>
                     <h4 class="gradient-text">1st Place</h4><br>
-                    <h4>Winter 2022</h4>
+                    <h4>Winter 2022</h4><br>
+                    <br>
                 </div>
 
             </div>
