Minor Revisions in Wording & Layout

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     
                 <nav class="horzontal-flex" style="flex-wrap: wrap; padding-left: 0.5em; padding-right: 0.5em; justify-content: center; align-content: center;">
                     <!-- <button onclick="window.location.href='sub-pages/style-test.html';">Style Sheet</button> -->
-                    <button onclick="window.location.href='sub-pages/Programming.html';">Programming</button>
-                    <button onclick="window.location.href='sub-pages/3D-Art.html';">3D Art</button>
                     <button onclick="window.location.href='sub-pages/Games.html';">Games</button>
-                    <button onclick="window.location.href='sub-pages/Portfolio.html';">Portfolio</button>
+                    <button onclick="window.location.href='sub-pages/Code.html';">Code</button>
+                    <button onclick="window.location.href='sub-pages/3D-Art.html';">3D Art</button>
+                    <button onclick="window.location.href='sub-pages/Resume.html';">Resume</button>
                 </nav>
             </div>
         </header>
@@ -60,7 +60,7 @@
                     <br>
                     Currently I study <b class="gradient-text">Informatics: Games Engineering</b> at TUM, but my studies are coming to an end soon. 
                     <br>
-                    Therefore I'm looking to join a Munich based studio.
+                    Therefore I'm looking to join a prefably Munich based studio.
                 </p>
             </section>
 
