--- a/sub-pages/style-test.html
+++ b/sub-pages/style-test.html
@@ -31,10 +31,10 @@
     
                 <nav class="horzontal-flex" style="flex-wrap: wrap; padding-left: 0.5em; padding-right: 0.5em; justify-content: center; align-content: center;">
                     <button onclick="window.location.href='style-test.html';">Style Sheet</button>
-                    <button onclick="window.location.href='Programming.html';">Programming</button>
-                    <button onclick="window.location.href='3D-Art.html';">3D Art</button>
                     <button onclick="window.location.href='Games.html';">Games</button>
-                    <button onclick="window.location.href='Portfolio.html';">Portfolio</button>
+                    <button onclick="window.location.href='Code.html';">Code</button>
+                    <button onclick="window.location.href='3D-Art.html';">3D Art</button>
+                    <button onclick="window.location.href='Resume.html';">Resume</button>
                 </nav>
             </div>
         </header>
