--- a/sub-pages/Games.html
+++ b/sub-pages/Games.html
@@ -32,10 +32,10 @@
     
                 <nav class="horzontal-flex" style="flex-wrap: wrap; padding-left: 0.5em; padding-right: 0.5em; justify-content: center; align-content: center;">
                     <!-- <button onclick="window.location.href='style-test.html';">Style Sheet</button> -->
-                    <button onclick="window.location.href='Programming.html';">Programming</button>
-                    <button onclick="window.location.href='3D-Art.html';">3D Art</button>
                     <button onclick="window.location.href='Games.html';">Games</button>
-                    <button onclick="window.location.href='Portfolio.html';">Portfolio</button>
+                    <button onclick="window.location.href='Code.html';">Code</button>
+                    <button onclick="window.location.href='3D-Art.html';">3D Art</button>
+                    <button onclick="window.location.href='Resume.html';">Resume</button>
                 </nav>
             </div>
         </header>
@@ -827,7 +827,7 @@
             <br>
             <div style="display: grid;">
                 <h style="text-align: center; align-self: center; justify-self: center;">
-                    There are a bunch of my games, I felt were to old or to bad to list here. Some of them can be found on itch.io
+                    There are a bunch of my games, I felt were to old or to uninteresting to list here. Some of them can be found on itch.io
                 </h>
             </div>
             <br>    
