Added imprint & privacy policy

--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
         
         
         <footer>
-            <h4 style="display: block; text-align: center; margin-bottom: 0; padding: 0; margin-top: 0;">External Links</h4>
+            <div class="horzontal-flex">
+                <a href="sub-pages/imprint.html" style="font-size: 0.75em;">Imprint</a>
+                <h4 style="display: block; text-align: center; margin-bottom: 0; padding: 0; margin-top: 0;">External Links</h4>
+                <a href="sub-pages/privacy-policy.html" style="font-size: 0.75em;">Privacy Policy</a>
+            </div>
             <!--
                 <hr style="transform: translateY(2.1em);">
                 <hr style="transform: translateY(2.9em);">
