attempting to make my site crawlable
bots dont click on buttons, but invisible links might work

--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
                     <button onclick="window.location.href='sub-pages/Code.html';">Code</button>
                     <button onclick="window.location.href='sub-pages/3D-Art.html';">3D Art</button>
                     <button onclick="window.location.href='sub-pages/Resume.html';">Resume</button>
+                
+                    <!--
+                        So bots can crawl my page
+                    -->
+                    <div style="width:0; height: 0; opacity:0;">
+                        <a href="sub-pages/Games.html" onclick="return false;"></a>
+                        <a href="sub-pages/Code.html" onclick="return false;"></a>
+                        <a href="sub-pages/3D-Art.html" onclick="return false;"></a>
+                        <a href="sub-pages/Resume.html" onclick="return false;"></a>
+                    </div>
                 </nav>
             </div>
         </header>
@@ -60,7 +70,7 @@
                     <br>
                     Currently I study <b class="gradient-text">Informatics: Games Engineering</b> at TUM, but my studies are coming to an end soon. 
                     <br>
-                    Therefore I'm looking to join a prefably Munich based studio.
+                    Therefore I'm looking to join a preferably Munich based studio.
                 </p>
             </section>
 
