--- a/sub-pages/Resume.html
+++ b/sub-pages/Resume.html
@@ -14,6 +14,11 @@
         <meta property="og:image" content="https://jonas-hack.github.io/resources/page/profileThumb.png">
         <meta property="og:url" content="https://jonas-hack.github.io/index.html">
         <meta property="og:type" content="website">
+
+        <!-- Keywords-->
+        <meta name="description" content="Jonas Hack Game Development Portfolio">
+        <meta name="keywords" content="programming, art, 3d-art, portfolio, game, development, game development, game dev, unity, c#">
+
         <!-- Local style sheet relative to this file -->
         <link rel="stylesheet" href="../style.css">
     </head>
