Added 2 Coding projects + 1 screenshot
sail away screenshot

website projects

light probe placer

--- a/sub-pages/Games.html
+++ b/sub-pages/Games.html
@@ -807,12 +807,8 @@
                                         </a>
                                     </span>
 
-                                    <span class="container secondary sized-same-as-yt">
-                                        <h3>Click on Screenshots to view</h3><br><br>
-                                        <span class="dynamic-gallery">
-                                            <h>TODO</h>
-                                        </span>
-                                    </span>
+                                    <img class="sized-same-as-yt" src="../resources/screenshots/sw-movement.gif">
+                                    
                                 </div>
                             </section>          
 
