--- a/sub-pages/privacy-policy.html
+++ b/sub-pages/privacy-policy.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="utf-8">
-        <title>Style Test</title>
+        <title>Privacy Policy</title>
         <link rel="icon" href="../resources/page/profileThumb.png">
         <link rel="apple-touch-icon" sizes="180x180" href="../resources/page/profileThumb.png">
 
