Slight layout fixes to privacy policy page
Also put in a rather vital "not"

--- a/sub-pages/privacy-policy.html
+++ b/sub-pages/privacy-policy.html
@@ -40,11 +40,10 @@
 
         <div class="center">
             <div class="container">
-                <br style="margin: 1em;">
-                <h2 class="gradient-text">Privacy Policy</div>
-                <br style="margin: 2em;">
+                <h2 class="gradient-text">Privacy Policy</h2>
+                <br style="margin: 3em;">
                 <div>
-                    <article class="description_text">
+                    <article>
                         <h3>Github Pages Service</h3><br><br>
                         <p>
                             This website is hosted as a GitHub Pages website.
@@ -56,7 +55,7 @@
 
                         <h3>Cookies</h3><br><br>
                         <p>
-                            This website does make use of cookies.
+                            This website does <b>not</b> make use of any cookies.
                         </p><br><br>
 
                         <h3>External Media</h3><br><br>
@@ -70,7 +69,7 @@
                                 <li>Artstation - <a href="https://www.artstation.com/privacy" target="_blank">Policy</a></li><br>
                                 <li>Github - <a href="https://docs.github.com/en/site-policy/privacy-policies" target="_blank">Policy</a></li><br>
                             </ul><br>
-                         </p>
+                        </p>
 
                     </acticle>
                 </div>
