Applied layout fix to imprint aswell
Also removed background container. These sub pages are supposed to be boring

--- a/sub-pages/imprint.html
+++ b/sub-pages/imprint.html
@@ -39,12 +39,11 @@
         </header>
 
         <div class="center">
-            <div class="container">
-                <br style="margin: 1em;">
-                <h2 class="gradient-text">Imprint</div>
-                <br style="margin: 2em;">
+            <div>
+                <h2 class="gradient-text">Imprint</h2>
+                <br style="margin: 3em;">
                 <div>
-                    <article class="description_text">
+                    <article>
                         Jonas Hack
                         <br>
                         -
