--- a/sub-pages/privacy-policy.html
+++ b/sub-pages/privacy-policy.html
@@ -39,7 +39,7 @@
         </header>
 
         <div class="center">
-            <div class="container">
+            <div>
                 <h2 class="gradient-text">Privacy Policy</h2>
                 <br style="margin: 3em;">
                 <div>
