Thumb Hover Effect +  Minor Style changes

--- a/sub-pages/Resume.html
+++ b/sub-pages/Resume.html
@@ -51,7 +51,7 @@
 
                 <div class="container">
                     <div class="horzontal-flex">
-                        <img src="../resources/page/profileThumb.png" style="max-width: 12em; aspect-ratio: 1; object-fit: contain;">
+                        <img src="../resources/page/profileThumb.png" style="max-width: 12em; aspect-ratio: 1; object-fit: contain; margin-top: 1em;">
                         <span class="vertical-flex" style="opacity: 0.5;padding-left: 1em; vertical-align: middle;">
                             <p>Game Dev</p><br>
                             <p>Tool Dev</p><br>
