--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <!-- Keywords-->
         <meta name="description" content="Jonas Hack Game Development Portfolio">
-        <meta name="keywords" content="programming, art, 3d-art, portfolio, game, development, game development, game dev, unity, c#">
+        <meta name="keywords" content="programming, art, 3d-art, portfolio, blog, game, development, game development, game dev, unity, c#">
 
         <!-- Local style sheet relative to this file -->
         <link rel="stylesheet" href="style.css">
@@ -69,8 +69,6 @@
             <section style="align-self: center; text-align: center; padding: 2em;">
                 <p> 
                     Hi, my name is Jonas Hack. I'm a <b class="gradient-text">Game Programmer</b> by trade and <b class="gradient-text">3D Artist</b> by hobby.
-                    <br>
-                    <b class="gradient-text">Tool Dev</b> and <b class="gradient-text">Tech Art</b> are among my special interests.
                     <br>
                     Currently I study <b class="gradient-text">Informatics: Games Engineering</b> at TUM, but my studies are coming to an end soon. 
                     <br>
