Youtube thumbnails now also tilt on  hover

--- a/sub-pages/Games.html
+++ b/sub-pages/Games.html
@@ -124,16 +124,19 @@
                                 </ul>
                             </section>
                             
-                            <span class="youtube-thumbnail">
-                                <a href="https://youtu.be/URnjtTHXqlk?si=LSq7rPoPV1nngPOM" target="_blank">
-                                    <div>
-                                        <img src="https://img.youtube.com/vi/URnjtTHXqlk/0.jpg">
-                                        <img src="../resources/branding/youtube-icon.png">
-                                        <h4>View on Youtube</h4>
-                                    </div>
-                                </a>
-                            </span>
+                            <div class="reactive-flex">
+                                <span class="youtube-thumbnail">
+                                    <a href="https://youtu.be/URnjtTHXqlk?si=LSq7rPoPV1nngPOM" target="_blank">
+                                        <div>
+                                            <img src="https://img.youtube.com/vi/URnjtTHXqlk/0.jpg">
+                                            <img src="../resources/branding/youtube-icon.png">
+                                            <h4>View on Youtube</h4>
+                                        </div>
+                                    </a>
+                                </span>
                             
+                            </div>
+
                             <div class="container secondary">
                                 <h3>Enemy AI</h3>
                                 <br><br>
