Grammar "to" vs "too" + spelling mistake in robots.txt

--- a/sub-pages/Code.html
+++ b/sub-pages/Code.html
@@ -546,7 +546,7 @@
             <br>
             <div style="display: grid;">
                 <h style="text-align: center; align-self: center; justify-self: center;">
-                    There are a bunch of projects, I felt were too outdated or to small to list here. Some of them can be found on github.
+                    There are a bunch of projects, I felt were too outdated or too small to list here. Some of them can be found on github.
                 </h>
             </div>
 
