--- a/sub-pages/Games.html
+++ b/sub-pages/Games.html
@@ -824,7 +824,7 @@
             <br>
             <div style="display: grid;">
                 <h style="text-align: center; align-self: center; justify-self: center;">
-                    There are a bunch of my games, I felt were to old or to uninteresting to list here. Some of them can be found on itch.io
+                    There are a bunch of my games, I felt were too old or too uninteresting to list here. Some of them can be found on itch.io
                 </h>
             </div>
             <br>    
