--- a/sub-pages/Resume.html
+++ b/sub-pages/Resume.html
@@ -72,7 +72,7 @@
     
                     <h3>B.Sc in Informatics: Games Engineering</h3><br>
                     <h4>Technical University Munich</h4> <p style="opacity: 0.5;padding-left: 1em; float:inline-end;">Munich</p><br>
-                    <h4>Ongoing until ~ Summer 2024</h4>
+                    <h4>Ongoing until ~ Spring 2025</h4>
                     <br><br>
     
                     <h3>Abitur</h3><br>
