--- a/sub-pages/Code.html
+++ b/sub-pages/Code.html
@@ -448,7 +448,7 @@
                             <summary>Read More</summary>
                             <section>
 
-                                I made this <b class="gradient-text">Portfolio Website</b> entirely in <b>HTML</b> & <b>CSS</b>, not only without any frameworks, but also without any <i>JSS</i>.
+                                I made this <b class="gradient-text">Portfolio Website</b> entirely in <b>HTML</b> & <b>CSS</b>, not only without any frameworks, but also without any <i>JS</i>.
                                 <br><br>
 
                                 Its main purpose is to showcase my projects and display my resume, whithout any fancy design shenanigans getting in the way.
