added info - study is now over

--- a/sub-pages/VR-Fencing.html
+++ b/sub-pages/VR-Fencing.html
@@ -36,6 +36,10 @@
 
         <div class="center">
             
+            <br><br>
+            <h1 class="gradient-text">Diese Studie ist beendet. Danke an alle Teilnehmer!</h1>
+            <br><br>
+
             <p>Hallo und danke fürs Interesse an unser Studie!</p>
             <br style="margin: 1em;"/>
                 
