--- a/sub-pages/VR-Fencing-English.html
+++ b/sub-pages/VR-Fencing-English.html
@@ -36,6 +36,10 @@
 
         <div class="center">
             
+            <br><br>
+            <h1 class="gradient-text">This study is over. Thank you to all participants!</h1>
+            <br><br>
+
             <p>Hello and thank you for your interest in our study!</p>
             <br style="margin: 1em;"/>
                 
