Updated content to show graduation

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 <p> 
                     Hi, my name is Jonas Hack. I'm a <b class="gradient-text">Game Programmer</b> by trade and <b class="gradient-text">3D Artist</b> by hobby.
                     <br>
-                    Currently I study <b class="gradient-text">Informatics: Games Engineering</b> at TUM, but my studies are coming to an end soon. 
+                    I recently graduated from TUM with a B.Sc. in <b class="gradient-text">Informatics: Games Engineering</b>, and am now starting the masters. 
                     <br>
-                    Therefore I'm looking to join a preferably Munich based studio.
+                    Currently I'm looking to join a preferably Munich based studio, either as a working student or even full-time.
                 </p>
             </section>
 
